force-app/main/default/objects/a4x_Monitoring_Event__c/a4x_Monitoring_Event__c.object-meta.xml
<CustomObject>
    <label>a4x Monitoring Event</label>
    <nameField>
        <label>a4x Monitoring Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>a4x Monitoring Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>