force-app/main/default/objects/a4x_Monitoring_Event__c/fields/Data_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Id__c</fullName>
    <label>Data Source Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>