force-app/main/default/objects/a4x_Monitoring_Event__c/fields/Items_In_Failed_Batch__c.field-meta.xml
<CustomField>
    <fullName>Items_In_Failed_Batch__c</fullName>
    <label>Items In Failed Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>