force-app/main/default/objects/a4x_Monitoring_Event__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>