force-app/main/default/objects/a4x_Monitoring_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Key__c</columns>
    <columns>Data_Source_Id__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>