force-app/main/default/objects/a4x_Monitoring_Event__c/listViews/All_without_updateMeasures_failed.listView-meta.xml
<ListView>
    <fullName>All_without_updateMeasures_failed</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Key__c</columns>
    <columns>Data_Source_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Message__c</field>
        <operation>notContain</operation>
        <value>pdateMeasures failed for this Key</value>
    </filters>
    <label>All without updateMeasures failed</label>
</ListView>